# flimmer-trainer

./: .flimmer-todos.md  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
config_templates/: README.md
docs/: CONTROL_SIGNAL_ARCHITECTURE.md  I2V_GUIDE.md  LOCAL_SETUP.md  LOW_VRAM_GUIDE.md  PHASE_TRAINING.md  PIPELINES.md  README.md  TARGET_SIGNAL_ARCHITECTURE.md  TECHNICAL_ARCHITECTURE.md  TRAINING_CONFIG_WALKTHROUGH.md  TRAINING_METHODOLOGY.md  WANDB_GUIDE.md
example_phased/: README.md  flimmer_data.yaml  flimmer_train.yaml  project.yaml
example_simple/: README.md  flimmer_data.yaml  flimmer_train.yaml
examples/: README.md  full_data.yaml  full_train.yaml  i2v_wan21.yaml  i2v_wan22.yaml  minimal_data.yaml  project_moe.yaml  standard_data.yaml
flimmer/: __init__.py
mockup_configs/: flimmer_data.yaml  flimmer_train.yaml  project.yaml
runpod/: README.md  setup.sh  test-train.yaml  train.py
scripts/: prepare.ps1  prepare.sh  setup.ps1  setup.sh  smoke_test.sh  train.ps1  train.sh
tests/: conftest.py  test_block_swap.py  test_caption_models.py  test_caption_prompts.py  test_caption_scoring.py  test_captioner.py  test_data_config.py  test_dataset_bucketing.py  test_dataset_cli.py  test_dataset_discover.py  test_dataset_manifest.py  test_dataset_models.py  test_dataset_organize.py  test_dataset_organize_cli.py  test_dataset_quality.py  test_dataset_trainers.py  (+61 more)
(+146 files in other folders)
